Add sign in error copy

--- a/instructions.html
+++ b/instructions.html
@@ -1,3 +1,4 @@
+alice@example.com <a href="signout">Log out</a>
 <h1>Instructions</h1>
 <p>Sharing your story on Mozilla Spotlight is easy.</p>
 <ol>
