--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <html>
 <head>
 <title>Mozilla Community Spotlight</title>
-<link href='http://fonts.googleapis.com/css?family=Open+Sans:800,600,300' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:600,300' rel='stylesheet' type='text/css'>
 <link href="stylo.css" media="screen, projection" rel="stylesheet" type="text/css" />
 
 </head>
 <body>
 <article>
+<!-- TODO A11y image text replacement -->
 <!--h1>Mozillians Spotlight</h1 -->
 <img src="logo.jpg" id="logo" />
 <p>Highlighting everyone in random order, one per day.</p>
 <h2>Austin King - Seattle, WA, USA</h2>
-
-<iframe src="//player.vimeo.com/video/64455243" width="500" height="400" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/64455243">Taxiderm Freaky Friday</a> from <a href="http://vimeo.com/user1242210">Austin King</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 
 <iframe width="420" height="315" src="//www.youtube.com/embed/CBhop1NQ8lg" frameborder="0" allowfullscreen></iframe>
 </article>
