--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
 <!-- TODO A11y image text replacement -->
 <!--h1>Mozillians Spotlight</h1 -->
 <img src="logo.jpg" id="logo" />
-<p>Highlighting everyone in random order, one per day.</p>
+<p>Spotlighting a random Mozillan, one per day.</p>
 <h2>Austin King - Seattle, WA, USA</h2>
 
 <iframe width="420" height="315" src="//www.youtube.com/embed/CBhop1NQ8lg" frameborder="0" allowfullscreen></iframe>
 </article>
+<nav>
+<ul>
+<li>About</li>
+</ul>
+</nav>
 </body>
 </html>
