--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
 <h2>Austin King - Seattle, WA, USA</h2>
 
 <iframe width="420" height="315" src="//www.youtube.com/embed/CBhop1NQ8lg" frameborder="0" allowfullscreen></iframe>
-</article>
+
 <nav>
 <ul>
-<li>About</li>
+    <li><a href="">About</a></li>
 </ul>
 </nav>
+</article>
+
 </body>
 </html>
