Improve mobile view. Add favicon

--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <html>
 <head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>Mozilla Community Spotlight</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:600,300' rel='stylesheet' type='text/css'>
 <link href="stylo.css" media="screen, projection" rel="stylesheet" type="text/css" />
-
+<link rel="shortcut icon" type="image/ico" href="favicon.ico">
 </head>
 <body>
 <article>
@@ -13,12 +16,13 @@
 <p>Spotlighting a random Mozillan, one per day.</p>
 <h2>Austin King - Seattle, WA, USA</h2>
 
-<iframe width="420" height="315" src="//www.youtube.com/embed/CBhop1NQ8lg" frameborder="0" allowfullscreen></iframe>
+<iframe xwidth="320" xheight="315" src="//www.youtube.com/embed/CBhop1NQ8lg" frameborder="0" allowfullscreen></iframe>
 
 <nav>
 <ul>
     <li><a href="archives.html">Archives</a></li>
     <li><a href="">About</a></li>
+    <li><a href="mailto:help@mozillaspotlight.com">Contact US</a></li>
 </ul>
 </nav>
 </article>
