Put original video size back in

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <p>Spotlighting a random Mozillan, one per day.</p>
 <h2>Austin King - Seattle, WA, USA</h2>
 
-<iframe xwidth="320" xheight="315" src="//www.youtube.com/embed/CBhop1NQ8lg" frameborder="0" allowfullscreen></iframe>
+<iframe width="420" height="315" src="//www.youtube.com/embed/CBhop1NQ8lg" frameborder="0" allowfullscreen></iframe>
 
 <nav>
 <ul>
